syntax = "proto3";

package account;

option go_package = "github.com/tunvx/simplebank/grpc/pb/manage/account";

import "google/protobuf/timestamp.proto";  

message Account {
    string account_number = 1;
    int64 current_balance = 2;
    string currency_type = 3;
    google.protobuf.Timestamp created_at = 4; 
    string description = 5;
    string account_status = 6;
}

message IAccount {
    int64 account_id = 1;
    string account_number = 2;
    int64 current_balance = 3;
    string currency_type = 4;
    google.protobuf.Timestamp created_at = 5; 
    string description = 6;
    string account_status = 7;
}

